Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108219

qdoc: Arguments for format-specific macros are lost

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.5.0 Beta1
    • 6.4
    • Build tools: qdoc
    • None
    • 8be8426091 (qt/qttools/dev) 8be8426091 (qt/tqtc-qttools/dev)
    • DaVinci 66, DaVinci 67

    Description

      If there are two definitions for a macro with parameters, for example:

      macro.hello.HTML    = "<p>Hi, \1</p>"
      macro.hello.DocBook = "<db:para>Hi, \1</db:para>"

      Then qdoc ends up in an inconsistent state when parsing

      /*!
        \page test.html
      
        \hello {world}
      */

      because it tries to read the arguments twice (for each macro) from the input stream, regardless of the selected output formats, and obviously fails on the second round.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are 2 open Gerrit changes