qdoc: Attempt to read macro arguments only once

QDoc supports multiple versions of macros, one for each supported output
format:

  macro.hello.HTML    = "<p>Hi, \1</p>"
  macro.hello.DocBook = "<db:para>Hi, \1</db:para>"

Macros can also take arguments. However, with multiple format-specific
versions defined, QDoc attempted to also read the arguments multiple
times. This fails on the second attempt as the internal position has
been already advanced beyond the arguments.

Implement a new helper function, DocParser::getMacroArguments(), and
use it to read the arguments only once.

Fixes: QTBUG-108219
Pick-to: 6.2 6.4
Change-Id: Icad7e51b93c00a2632746ea2fe05d36459b9acda
Reviewed-by: Paul Wicking <paul.wicking@qt.io>